@@ -38,6 +38,7 @@ OBJS=	main.o\
 		icmp.o\
 		udp.o\
 		dhcp.o\
+		tftp.o\
 		start.o\
 
 LOADADDR=0x80000000
