@@ -3,6 +3,10 @@
 CoLo 1.7 (xxxx-xx-xx)
 ---------------------
 
+*	Added 'tftp' command.
+
+*	Added network stack (see the 'net' command).
+
 *	Added man pages for 'flash-tool' and 'putlcd'.
 	[Martin Michlmayr]
 
